cmake_minimum_required(VERSION 3.16)
project(learncuda)

set(CMAKE_CXX_STANDARD 17)

find_package(CUDA REQUIRED)
FIND_PACKAGE(OpenMP REQUIRED)
if(OpenMP_FOUND)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 Message(${OpenMP_CXX_FLAGS})
#  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS}
# ${OpenMP_EXE_LINKER_FLAGS}") 
endif()
#cuda_add_executable(learncuda main.cu)
include_directories(include)
#add_subdirectory(Reduction)
#add_subdirectory(DynamicParallel)
# add_subdirectory(Memory)
# add_subdirectory(SharedMemory)
# add_subdirectory(ConstantMemory)
# add_subdirectory(WarpDataSharing-Shift)
add_subdirectory(Stream)